centered Restaurants/List page

--- a/RestaurantApp/Pages/Restaurants/List.cshtml
+++ b/RestaurantApp/Pages/Restaurants/List.cshtml
@@ -2,5 +2,7 @@
 @model RestaurantApp.Pages.Restaurants.ListModel
 @{
 }
-<h1>Restaurants</h1>
-@Model.Message
+<center>
+    <h1>Restaurants</h1>
+    @Model.Message
+</center>
